# DISFOR

./: .gitattributes  .gitignore  .gitmodules  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
data/: class_colors.json  classes.json  id_mapping.csv  labels.parquet  pixel_data.parquet  samples.parquet  train_ids.json  val_ids.json
docs/: index.md  reference.md
docs/Usage/: dataloaders.ipynb
docs/usage/: dataloaders.ipynb  dataset-overview.ipynb  utils.py
notebooks/: 0_convert_windthrow.ipynb  1_homogenize_samples.ipynb  1a_quality_checks.ipynb  1b_get_train_test.ipynb  2_get_zarrs.ipynb  2a_clean_zarrs.py  2b_get_hrvpp_chips.py  2c_move_windthrow_chips.py  2d_get_stragglers.ipynb  3_dataloader.ipynb  3_move_chips_old_new.ipynb  4_pixel_value_extraction.ipynb  4a_data_preparation.ipynb  5_evoland_reinterpretation.ipynb  5a_evoland_geom_file.ipynb  5b_evoland_fill_out.ipynb  5b_evoland_full_stack.ipynb  5c_s1_windthrow_stacks.ipynb  6_cdse_time_series.ipynb  X_optuna_hyperparams.ipynb  Xb_infer_chips.ipynb  data_exploration.ipynb  data_validation.ipynb  extract_pixels.py  get_stack.py  get_stack_evoland.py  move_and_zstd.py  to_geotiff.py  update_pixel_data_labels.py  utils.py
reference/: index.html
search/: search_index.json
src/disfor/: __init__.py  const.py  data.py  data_fetcher.py  dataloader.py  datasets.py  io.py  torch.py  utils.py
src/disfor/datasets/: __init__.py  generic.py  monotemporal.py  tabular.py
tests/: test_generic_dataset.py  test_pytorch_dataset.py  test_ts_dataset.py
usage/: disfor_campaign.geojson
usage/dataloaders/: index.html
usage/utils/: index.html
