[project]
name = "disfor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonas Viehweger", email = "jonas.viehweger@joanneum.at" }
]
requires-python = ">=3.12"
dependencies = [
    "imagecodecs>=2025.8.2",
    "ipykernel>=6.30.1",
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "polars>=1.33.1",
    "pooch>=1.8.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "tifffile>=2025.9.30",
    "torch>=2.8.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
docs = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.6",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "plotly>=6.4.0",
    "plotnine>=0.15.0",
]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
