[project]
name = "disfor"
version = "0.2.1"
description = "Utilities to load and filter DISFOR dataset. The dataset provides forest disturbance agent labels for use with Sentinel-2."
readme = "README.md"
authors = [
    { name = "Jonas Viehweger", email = "jonas.viehweger@joanneum.at" }
]
requires-python = ">=3.12"
license = {text = "EUPL-1.2"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
dependencies = [
    "imagecodecs>=2025.8.2",
    "matplotlib>=3.10.6",
    "numpy>=2.1",
    "polars>=1.33.1",
    "pooch>=1.8.2",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.7.2",
    "tifffile>=2025.9.30",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.8.0",
    "lightning>=2.5.5",
]

[dependency-groups]
dev = [
    "hypothesis>=6.140.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ipykernel>=6.30.1",
    "rasterio>=1.4.3",
    "pystac-client>=0.9.0",
    "sentinelhub>=3.11.3",
]
docs = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "kaleido>=1.2.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.6",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "plotly>=6.4.0",
    "plotnine>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/JR-DIGITAL/DISFOR"
Documentation = "https://jr-digital.github.io/DISFOR/"
Repository = "https://github.com/JR-DIGITAL/DISFOR"
Issues = "https://github.com/JR-DIGITAL/DISFOR/issues"

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
